--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+     <title> FAVORITE FOOD </title>
+     <style>
+       h1{
+         text-align: center;
+         font-size: 48px;
+       }
+     </style>
     </head>
     
     <body>
-	
+
+	  <h1> Lara's Favorite Foods</h1>
+   
+    <div class="food">
+    <h2>chocolate</h2>
+  
+    Pasta
+    Pizza 
+    Cookies 
+    Gnocchi
     </body>
 </html>
