--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
        h1{
          text-align: center;
          font-size: 48px;
+        }
+       h2{
+         text-align: center;
+       }
+       h3{
+         font-style: italic;
+       }
+       .chocolate{
+         background-color:snow;
+         color: chocolate;
        }
      </style>
     </head>
     
     <body>
-
+    <!-- Chose other foods, more specific ones-->
 	  <h1> Lara's Favorite Foods</h1>
    
-    <div class="food">
-    <h2>chocolate</h2>
-  
+    <div class="chocolate">
+     <hr>
+     <h2>Chocolate</h2>
+     <h3> Dessert</h3>
+
+    </div>
     Pasta
     Pizza 
     Cookies 
